lib/src/compiler/tests/testdata/errors/152.out
error[E001]: syntax error
 --> line:3:13
  |
3 |         foo."foo"
  |             ^^^^^ expecting identifier, found `"foo"`